almost done with swagger, only need array
