# src/App.js
@@ -5,6 +5,7 @@ import './App.css';
 import MuiThemeProvider from 'material-ui/styles/MuiThemeProvider';
 import DestinationsPageContainer from './redux/containers/DestinationPageContainer';
 import AdventurePageContainer from './redux/containers/AdventurePageContainer';
+import loginPage from './components/login/loginPage';
 
 import setupStore from './redux/setupStore';
 
@@ -18,7 +19,12 @@ export default class App extends Component {
           <Provider store={store}>
             <Router>
               <Switch>
-                <Route exact path="/" component={DestinationsPageContainer} />
+                <Route exact path="/login" component={loginPage} />
+                <Route
+                  exact
+                  path="/destinations"
+                  component={DestinationsPageContainer}
+                />
                 <Route
                   exact
                   path="/destinations/:destinationId"
